[package]
name = "strut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
cen = { git = "https://github.com/n-e-l/cen.git", rev = "8d1f9241734ce25a0a40d25f744c66d528fcbe94" }
ash = "0.38.0"
gpu-allocator = { version = "0.27.0" }
egui = "0.32.0"
egui_dock = "0.17"
egui_extras = "0.32.0"
image = { version = "0.25", features = ["png"] }
bytemuck = "1.21.0"
okhsl = "1.0.1"
egui_code_editor = { version = "0.2" , features = ["editor"] }
colorful = "0.2.2"
